@@ -8,6 +8,7 @@
     * Url links in :jump list are clickable again
     * Gracefully handle unescaped regex characters in 'urlseparator' option
     * :sanitize now respects timespan values
+    * add '-select' option to :tabclose command for specifiying which tab is selected after closing the current one
 
 2011-11-13:
     * version 3.3
